# tracker

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Pipfile  README.md  TODO  UnitConvention.md  environment.yml  install  prototype  setup.json  setup.py  test.root
demo/: CMakeLists.txt  prototype_tracking.cc
demo/box/: CMakeLists.txt  box_tracking.cc  geometry.cc  geometry.hh  input_card.yaml  io.cc  io.hh  logging.cc  logging.hh  tracking.cc
demo/box/resources/: world.box.gdml
demo/module_box/: CMakeLists.txt  geometry.cc  geometry.hh  input_card.yaml  tracking.cc
demo/plugin/: CMakeLists.txt
demo/prototype/: CMakeLists.txt  detector_map.txt  geometry.cc  geometry.hh  input_card.yaml  io.cc  io.hh  logging.cc  logging.hh  prototype_tracking.cc  tracking.cc  tracking.yaml
demo/prototype/mc_study/: README.md  info.txt
demo/prototype/mc_study/data/: statistics.root  statistics0.root  statistics10.root  statistics11.root  statistics2.root  statistics3.root  statistics6.root  statistics8.root  statistics9.root
demo/prototype/mc_study/stat/: statistics.root  statistics1.root  statistics4.root  statistics5.root  statistics7.root
demo/prototype/resources/: world.prototype.gdml
demo/prototype/scripts/: make_plots.C
include/: analysis.hh  event.hh  geometry.hh  plot.hh  point.hh  reader.hh  root_helper.hh  types.hh  units.hh  util.hh
include/geometry/: Construction.hh  Reader.hh
include/tracker/: analysis.hh  geometry.hh  plot.hh  point.hh  reader.hh  script.hh  stat.hh  track.hh  type.hh  units.hh  util.hh  vertex.hh
include/tracker/analysis/: analysis.hh  event.hh  join.hh  monte_carlo.hh  seed.hh  simulation.hh  track.hh  tree.hh  type.hh  vertex.hh
include/tracker/core/: stat.hh  type.hh  units.hh
include/tracker/util/: algorithm.hh  bit_vector.hh  command_line_parser.hh  error.hh  functional.hh  index_vector.hh  io.hh  math.hh  string.hh  time.hh  type.hh
include/util/: CommandLineParser.hh  algorithm.hh  bit_vector.hh  combinatorics.hh  command_line_parser.hh  error.hh  io.hh  math.hh  string.hh
src/: analysis.cc  geometry.cc  plot.cc  reader.cc  root_helper.cc  tracker.cc
src/geometry/: Construction.cc  Reader.cc
src/tracker/: analysis.cc  geometry.cc  plot.cc  reader.cc  script.cc  stat.cc  track.cc
src/tracker/analysis/: analysis.cc  analysis_helper.hh  event.cc  join.cc  monte_carlo.cc  seed.cc  simulation.cc  track.cc  tree.cc  vertex.cc
src/tracker/core/: stat.cc
src/tracker/helper/: analysis.hh  root.hh
src/tracker/plot/: canvas.cc  histogram.cc  histogram_collection.cc  plot.cc  value_tag.cc
src/tracker/util/: command_line_parser.cc
src/util/: CommandLineParser.cc  command_line_parser.cc
tests/: __init__.py
tracker/: __init__.py  _version.py  geometry.py  units.py
tracker/analysis/: __init__.py  fitting.py  track.py  vertex.py
tracker/io/: __init__.py  reader.py  script.py  writer.py
tracker/projects/box/: __init__.py
tracker/projects/box/resources/: input_card.yaml  world.box.gdml
tracker/projects/test_stand/: __init__.py
tracker/ui/: __init__.py  canvas.py
tracker/util/: __init__.py  core.py  math.py
